--- a/register.html
+++ b/register.html
@@ -12,43 +12,43 @@
 <body>
     <div class="container container-fluid">
         <div class="row justify-content-center">
-            <form action="register.php" method="POST">
+            <form action="config.php" method="POST" autocomplete="off">
                 <br>
                 <div class="form-group text-center">
-                    <h1 class="display-4">Cadastro de Usuário</h1>
+                    <h1 class="display-4">Cadastro</h1>
                 </div>
                 <br>
 
                 <div class="row form-group">
                     <div class="col">
                         <span>Nome:</span>
-                        <input type="text" name="firstname" id="firsname" class="form-control">
+                        <input type="text" name="firstname" id="firsname" class="form-control" required>
                     </div>
                     <div class="col">
                         <span>Sobrenome:</span>
-                        <input type="text" name="lastname" id="lastname" class="form-control">
+                        <input type="text" name="lastname" id="lastname" class="form-control" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="username">Nome de Usuário:</label>
-                    <input type="text" name="username" id="username" class="form-control">
+                    <input type="text" name="username" id="username" class="form-control" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="text" name="email" id="email" class="form-control">
+                    <input type="text" name="email" id="email" class="form-control" required>
                 </div>
                 <div class="form-group">
                     <label for="pwd">Senha:</label>
-                    <input type="password" name="pwd" id="pwd" class="form-control">
+                    <input type="password" name="pwd" id="pwd" class="form-control" required>
                 </div>
                 <div class="form-group">
                     <label for="pwd2">Confirmar senha:</label>
-                    <input type="password" name="pwd2" id="pwd2" class="form-control">
+                    <input type="password" name="pwd2" id="pwd2" class="form-control" required>
                 </div>
                 <br>
-                <button type="submit" name="reg" class="btn btn-primary btn-md btn-block">Cadastrar-se</button>
+                <button type="submit" value="Register" class="btn btn-primary btn-md btn-block">Cadastrar-se</button>
                 <br>
-                <p>Já possui conta?<a href="login.php"> Faça login</a>.</p>
+                <p>Já possui conta?<a href="login.php"> Faça login</a></p>
             </form>
         </div>
     </div>
